--- a/_config.yml
+++ b/_config.yml
@@ -6,34 +6,20 @@ favicon: images/favicon.ico
 version: 2
 
 # Personal info
-name: Brett Harris
-title: Senior Network System Administrator
-email: brett.h@email.co.uk
-website: www.github.com/sproogen/resume-theme
+name: MuSun Choi
+title: Graduate Student
+email: moosunny@korea.ac.kr
+website: www.github.com/moosunny
 
 # Dark Mode (true/false/never)
 darkmode: false
 
-# Social links
-twitter_username: facespics
-github_username:  sproogen
-# stackoverflow_username: "00000001"
-# dribbble_username: jekyll
-# facebook_username: jekyll
-# flickr_username: jekyll
-instagram_username: jameswgrant
-linkedin_username: jameswgrant
-# xing_username: jekyll
-# pinterest_username: jekyll
-youtube_username: globalmtb
-# googleplus_username: +jekyll
-# orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
 additional_links:
-- title: itsgoingto.be
-  icon: fas fa-globe
-  url: https://www.itsgoingto.be
+- title: Github Link
+  icon: fab fa-github
+  url: https://www.github.com/moosunny
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
 #   url: Link url (eg. https://google.com)
@@ -46,77 +32,132 @@ additional_links:
 
 # About Section
 # about_title: About Me
-about_profile_image: images/profile.jpg
+about_profile_image: images/최무선(2).jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
-
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+  Hi, my name is MuSun Choi. I am an M.S. student in Industrial & Management Engineering at Korea University.   
+  My research interest is in Time-Series Analysis, Machine Learning, Graph-Neural Networks, and Semi-Supervised Learning. 
+  
+  - Methodologies: Machine Learning, Deep Learning, GNN
+  - Applications: Battery Swapping Station based two-wheeled vehicles, Allocation Battery Swapping Stataion
 
 content:
+  - title: Education
+    layout: list
+    content:
+      - layout: top
+        title: Korea University
+        # sub_title: 2023 - 2025
+        caption: 2023 - 2025
+        description: | # this will include new lines to allow paragraphs
+          M.S. in Industrial Management Engineering
+      - layout: top
+        title: Tech University of Korea
+        # sub_title: 2017 - 2023
+        caption: 2016 - 2022
+        description: | # this will include new lines to allow paragraphs
+          B.S. in Industrial Management and Administration
+
+  - title: Publications
+    layout: list
+    content:
+      - layout: top
+        title: International Journals
+        # sub_title: Job title
+        # caption: Date Range (eg. November 2016 - present)
+        # link: Link to company (optional)
+        description: | # this will include new lines to allow paragraphs
+          - (Works in Progress) Hyungjoo Cha, Joonghoo Park, Chungmok Lee* and Taesu Cheong*, "An Exact algorithm for Vehicle Routing Problem with Availability Profiles"
+          - (Works in Progress) Joonghoo Park, Gwangjong Ko, Hyungjoo Cha and Taesu Cheong*, “Vehicle routing problem with metro based backhauls and MFCs”
+          - (Works in Progress) Joonghoo Park, Hyungjoo Cha, San Kwon and Taesu Cheong*, “Temporary medical shelter location-routing problem with manpower allocation in a disaster situation”
+          - Seongjin Lee, Joonghoo Park, Seungmin Cha and Donghyun Kim* (2022), “A Regional Economy’s Resistance to the COVID-19 Shock: Sales Revenues of Micro-, Small-, and Medium-Sized Enterprises in South Korea”, International Journal of Disaster Risk Science
+
+  - title: Conferences
+    layout: list
+    content:
+      - layout: top
+        title: International Conferences
+        # sub_title: Job title
+        # caption: Date Range (eg. November 2016 - present)
+        # link: Link to company (optional)
+        description: | # this will include new lines to allow paragraphs
+          - Joonghoo Park, Hyungjoo Cha, San Kwon and Taesu Cheong*, “Temporary medical shelter location-routing problem with manpower allocation in a disaster situation”, 2024 INFORMS Annual Meeting, Nov 2024.
+          - Joonghoo Park, Gwangjong Ko and Taesu Cheong*, “Micro-fulfillment center location routing problem with underground logistics system”, 2024 International Conference of Asian Shipping and Logistics, Jun 2024.  
+
   - title: Projects # Title for the section
     layout: list # Type of content section (list/text)
     content:
-      - layout: top-middle
-        title: Super awesome project
-        link: github.com/sproogen
-        # link_text: Project Website
-        additional_links:
-          - title:  sproogen/modern-resume-theme
-            icon: fab fa-github
-            url: github.com/sproogen/modern-resume-theme
-          # - title:  Github page for project (eg. sproogen/modern-resume-theme)
-          #   icon: fab fa-github
-          #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
-        quote: >
-          This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
+      - layout: top
+        title: Samsung Display
+        caption: Mar. 2024 - Present
         description: | # this will include new lines to allow paragraphs
-          I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
-
-  - title: Experience # Title for the section
-    layout: list # Type of content section (list/text)
+          Optimize facility planning by using optimization, Research Assistant @ Korea University
+      - layout: top
+        title: IITP
+        caption: Feb. 2024 - Present
+        description: | # this will include new lines to allow paragraphs
+          Development of NetZero Building Energy Efficient System through AI-based HVAC system control, Information and Communication Planning and Evaluation Institute, Research Assistant @ Korea University 
+      - layout: top
+        title: Samsung Electronics
+        caption: Nov. 2023 - Feb. 2024
+        description: | # this will include new lines to allow paragraphs
+          Maximize productivity by changing facility and logistics layouts Model development, Research Assistant @ Korea University
+  
+  - title: Research Experience
+    layout: list
     content:
-      - layout: left
-        title: The Boring Company
-        link: boringcompany.com
-        # link_text: boringcompany.com
-        sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
-        quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+      - layout: top
+        title: Bigdata Analytics & Engineering Lab
+        # sub_title: Research Intern
+        caption: 2022 - 2023
+        # link: Link to company (optional)
         description: | # this will include new lines to allow paragraphs
-            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+          Research Intern at Bigdata Analytics & Engineering Lab, Pusan National University
+      - layout: top
+        title: Regional Development & Planning Lab
+        # sub_title: Research Intern
+        caption: 2021 - 2022
+        # link: Link to company (optional)
+        description: | # this will include new lines to allow paragraphs
+          Research Intern at Regional Development & Planning Lab, Pusan National University
 
-  - title: Education # Title for the section
-    layout: list # Type of content section (list/text)
+  - title: Awards & Honors
+    layout: list
     content:
-      - layout: left
-        title: Harvard University
-        caption: 2010 - 2013
-        sub_title: BSc Computer Science
-        quote: >
-          Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
+      - layout: top
+        title: Korea University
         description: | # this will include new lines to allow paragraphs
-          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
+          Graduate School Mentor-Mentee Program, 2024
+      - layout: top
+        title: Korea University
+        description: | # this will include new lines to allow paragraphs
+          Future Talent Scholarship Student, 2023
 
-          I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
-
-  - title: A Little More About Me
-    layout: text
-    content: | # this will include new lines to allow paragraphs
-      Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-      - Rock climbing
-      - Gaming
-      - Knitting
-      - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
-
-      Look at this cool image  
-      ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
+  - title: Additional Information
+    layout: list
+    content:
+      - layout: top
+        title: Programming Languages
+        description: | # this will include new lines to allow paragraphs
+          - Python
+          - C++
+          - Julia
+      - layout: top
+        title: Optimization Software
+        description: | # this will include new lines to allow paragraphs
+          - CPLEX
+          - Gurobi
+      - layout: top
+        title: Military Service
+        caption: Jan. 2019 - Nov. 2020
+        description: | # this will include new lines to allow paragraphs
+          Republic of Korea Air Force
 
 # Footer
 footer_show_references: true
 # references_title: References on request (Override references text)
 
 # Build settings
+# theme: modern-resume-theme (Use this is you are hosting your resume yourself)
 remote_theme: sproogen/resume-theme
 
 sass:
